--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "nodemon src/"
   },
   "keywords": [],
   "author": "",
@@ -12,11 +12,12 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "connect-flash": "^0.1.1",
+    "dotenv": "^16.0.0",
     "express": "^4.17.3",
-    "express-handlebars": "^6.0.3",
     "express-mysql-session": "^2.1.7",
     "express-session": "^1.17.2",
     "express-validator": "^6.14.0",
+    "hbs": "^4.2.0",
     "morgan": "^1.10.0",
     "mysql": "^2.18.1",
     "passport": "^0.5.2",
